# segmodule

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  bag_adapter.cpp  bag_adapter.hpp  basicseg  basicseg.cpp  featureExtractor.cpp  featureExtractor.hpp  main.cpp  segModule.code-workspace  seg_image.cpp  seg_image.hpp  segmenter.cpp  segmenter.hpp  segmenterFactory.cpp  segmenterFactory.hpp  segmenter_config.json  segmenter_config.yaml
opencv-4.x/modules/highgui/src/: window_cocoa.mm
opencv-install/include/opencv4/opencv2/: cvconfig.h
opencv-install/lib/: libopencv_calib3d.so.4.14.0  libopencv_core.so.414  libopencv_features2d.so.4.14.0  libopencv_flann.so.4.14.0  libopencv_flann.so.414  libopencv_gapi.so.414  libopencv_highgui.so.4.14.0  libopencv_highgui.so.414  libopencv_imgcodecs.so.414  libopencv_ml.so.4.14.0  libopencv_objdetect.so.4.14.0  libopencv_objdetect.so.414  libopencv_photo.so.4.14.0  libopencv_stitching.so.4.14.0  libopencv_video.so.4.14.0  libopencv_videoio.so.4.14.0
opencv-install/lib/cmake/opencv4/: OpenCVModules-release.cmake
opencv-install/share/licenses/opencv4/: ippiw-support.txt
tests/: segmenter_test.cpp  test_config.yaml
